// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DNS Configuration Will show configuration page when dns info is returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb6 el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Your custom DNS setup was completed on IaaS. For your custom domain to be working, you will now you need to notify your relevent Dev Ops team about the records mentioned below.
          </p>
        </div>
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Type
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            CNAME
          </p>
        </div>
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Name
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            https://custom-domain.reapit.cloud
          </p>
        </div>
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Value
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            dfgdfgdfg.cloudfront.com
          </p>
        </div>
      </div>
      <div
        class="el-mb6 el-form-layout"
      >
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Type
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            CNAME
          </p>
        </div>
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Name
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            dns record name
          </p>
        </div>
        <div
          class="mocked-styled-136 el-input-wrap-half"
        >
          <h2
            class="el-text-base el-subtitle"
          >
             Value
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            dns record value
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-130 el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <p
            class="el-text-base el-body-text"
          >
            Use the copy button below to copy all of the details above to use in your Jira ticket.
          </p>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Copy
          </button>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <p
            class="el-text-base el-body-text"
          >
            Use the buttons below to create a jira ticket for your respective region.
          </p>
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="mocked-styled-3 el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Create Jira Ticket UKI
              </button>
              <button
                class="el-intent-primary el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Create Jira Ticket ANZ
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb6 el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Your custom DNS setup was completed on IaaS. For your custom domain to be working, you will now you need to notify your relevent Dev Ops team about the records mentioned below.
        </p>
      </div>
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Type
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          CNAME
        </p>
      </div>
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Name
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          https://custom-domain.reapit.cloud
        </p>
      </div>
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Value
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          dfgdfgdfg.cloudfront.com
        </p>
      </div>
    </div>
    <div
      class="el-mb6 el-form-layout"
    >
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Type
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          CNAME
        </p>
      </div>
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Name
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          dns record name
        </p>
      </div>
      <div
        class="mocked-styled-136 el-input-wrap-half"
      >
        <h2
          class="el-text-base el-subtitle"
        >
           Value
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          dns record value
        </p>
      </div>
    </div>
    <div
      class="mocked-styled-130 el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <p
          class="el-text-base el-body-text"
        >
          Use the copy button below to copy all of the details above to use in your Jira ticket.
        </p>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Copy
        </button>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <p
          class="el-text-base el-body-text"
        >
          Use the buttons below to create a jira ticket for your respective region.
        </p>
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="mocked-styled-3 el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Create Jira Ticket UKI
            </button>
            <button
              class="el-intent-primary el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Create Jira Ticket ANZ
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DNS Configuration Will show setup domain model component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb6"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          To use a custom domain, you'll need to start this process by using the button below. Once you've created, you'll need to inform dev ops to configure your DNS with the details provided by the IaaS platform.
        </p>
      </div>
      <button
        class="el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        Setup Custom DNS
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb6"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        To use a custom domain, you'll need to start this process by using the button below. Once you've created, you'll need to inform dev ops to configure your DNS with the details provided by the IaaS platform.
      </p>
    </div>
    <button
      class="el-intent-primary el-button"
    >
      <div
        class="mocked-styled-0 el-button-loader"
      />
      Setup Custom DNS
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
